change in theme

--- a/config.toml
+++ b/config.toml
@@ -46,12 +46,12 @@ copyright = "Joe Rossi"
     identifier = "project"
     url = "/project/"
     weight = 2
-[[menu.main]]
-    name = "Contact"
-    url = "/page/contact/"
-    weight = 3
+#[[menu.main]]
+#    name = "Contact"
+#    url = "/page/contact/"
+#    weight = 3
 
 [[menu.main]]
     name = "About"
-    url = "/page/about/"
+    url = "//about/"
     weight = 4
